--- a/web/bundles/zectranet/templates/chat.html
+++ b/web/bundles/zectranet/templates/chat.html
@@ -11,14 +11,10 @@
                         ng-class="{'pull-right': USER_ID == post.user.id, 'pull-left': USER_ID != post.user.id }">
                     [[  post.user.username  ]]
                 </strong>
-                <div  ng-if="( isEditable($index) == true)" ng-click="EditPost(post)" class=" editpost">
-                    <i class="fa fa-pencil-square-o"></i>
-                </div>
-
                 <small class="text-muted" ng-class="{'pull-left': USER_ID == post.user.id, 'pull-right': USER_ID != post.user.id }">
                     <i class="fa fa-clock-o fa-fw"></i>
-                    <span style="color: #000000; font-style: italic">[[post.posted]]</span>
-                    <i ng-if="post.edited" class="fa fa-edit"></i>
+                    <span ng-if="post.edited == null" style="color: #000000; font-style: italic">[[post.posted]]</span>
+                    <span ng-if="post.edited != null" style="color: #000000; font-style: italic">[[post.edited]] <i  class="fa fa-edit"></i></span>
                 </small>
             </div>
             <pre style="white-space: pre-line;">
