--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -563,6 +563,7 @@
     <script src="{{ asset('bundles/zectranet/js/draganddrop.js') }}"></script>
     <script src="{{ asset('bundles/zectranet/js/AngularJS/scrollglue.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/zectranet/js/AngularJS/angular-messages.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/zectranet/js/AngularJS/angular-flat-charts.js') }}" type="text/javascript"></script>
 
     <script src="{{ asset('bundles/zectranet/js/Bootstrap/ui-bootstrap-tpls-0.10.0.min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('bundles/zectranet/js/metisMenu.js') }}" type="text/javascript"></script>
@@ -600,6 +601,8 @@
 		};
 
         var TEMPPARAMS = {};
+        var userHomeOfficeID = "{{ app.user.homeOfficeID }}";
+        var USER_ID = {{ app.user.id }};
 
 		var SearchText = null;
 		{% if searchText is defined and searchText != null %}
