--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <ol class="breadcrumb" style="margin: 0 -30px; border-radius: 0 !important; padding: 12px 50px; background-color: #fbfbfb; ">
                 <li>
-                    <a href="{{ path('zectranet_user_home') }}">Summary</a>
+                    <a href="{{ path('zectranet_user_home') }}">Summarssssy</a>
                 </li>
                 <li class="active">
                     {{ project.name }}
