--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -43,11 +43,11 @@
                                         </div>
 
                                         <div class="list-group-item" ng-repeat="item in miniSearchResults.HFForums.threads">
-                                            <a href="#" target="_self">[[ item.href ]]</a>
+                                            <a ng-href="[[ item.href ]]" target="_self">[[ item.title ]]</a>
                                         </div>
 
                                         <div class="list-group-item" ng-repeat="item in miniSearchResults.HFForums.posts">
-                                            <a href="#" target="_self">[[ item.href ]]</a>
+                                            <a ng-href="[[ item.href ]]" target="_self">[[ item.message ]]</a>
                                         </div>
 
                                         <div class="list-group-item" ng-repeat="item in miniSearchResults.QnAForums">
