Search develop part #3

--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -602,8 +602,10 @@
 		};
 
         var TEMPPARAMS = {};
+        {% if app.user %}
         var userHomeOfficeID = "{{ app.user.homeOfficeID }}";
         var USER_ID = {{ app.user.id }};
+        {% endif %}
 
 		var SearchText = null;
 		{% if searchText is defined and searchText != null %}
