--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -43,7 +43,10 @@
                                         </div>
 
                                         <div class="list-group-item" ng-repeat="item in miniSearchResults.HFForums.threads">
-                                            <a ng-href="[[ item.href ]]" target="_self">[[ item.title + ' ' + item.message ]]</a>
+                                            <a ng-href="[[ item.href ]]" target="_self" style="text-decoration: none;">
+                                                <h4 class="text-info">[[ item.title ]]</h4>
+                                                <p style="color: black; font-style: italic; font-size: 11px;">[[ item.message ]]</p>
+                                            </a>
                                         </div>
 
                                         <div class="list-group-item" ng-repeat="item in miniSearchResults.HFForums.posts">
@@ -51,7 +54,10 @@
                                         </div>
 
                                         <div class="list-group-item" ng-repeat="item in miniSearchResults.QnAForums.threads">
-                                            <a ng-href="[[ item.href ]]" target="_self">[[ item.title + ' ' + item.message ]]</a>
+                                            <a ng-href="[[ item.href ]]" target="_self" style="text-decoration: none;">
+                                                <h4 class="text-info">[[ item.title ]]</h4>
+                                                <p style="color: black; font-style: italic; font-size: 11px;">[[ item.message ]]</p>
+                                            </a>
                                         </div>
 
                                         <div class="list-group-item" ng-repeat="item in miniSearchResults.QnAForums.posts">
