--- a/src/ZectranetBundle/Resources/views/search.html.twig
+++ b/src/ZectranetBundle/Resources/views/search.html.twig
@@ -1,4 +1,4 @@
-{% extends 'IntranetMainBundle:Index:index.html.twig' %}
+{% extends '@Zectranet/index.html.twig' %}
 
 {% block title %}Search Page{% endblock %}
 
