Search develop part #4

--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -23,7 +23,7 @@
                                    type="search" />
 
                             <span class="input-group-btn">
-                                <a ng-href="{{ path('zectranet_user_page', { 'user_id' : app.user.id }) }}SearchPage/[[searchInput]]"
+                                <a ng-href="{{ path('zectranet_search_page') }}"
                                    class="btn btn-default" ng-class="{ 'disabled': searchInput.length == 0 }" target="_blank">
                                     <i class="fa fa-search"></i>
                                 </a>
