--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -589,6 +589,8 @@
 			miniSearch: "{{ path('zectranet_quick_search') }}",
             urlMiniSearchHeaderThread: "{{ path('zectranet_show_header_forum_thread', {'project_id': 0, 'subheader_id': 1, 'thread_id': 2 }) }}",
 			urlMiniSearchQnaThread: "{{ path('zectranet_show_QnA_thread', {'project_id': 0, 'thread_id' : 1}) }}",
+            urlMiniSearchProject: "{{ path('zectranet_show_project', {'project_id': 0}) }}",
+            urlMiniSearchTask: "{{ path('zectranet_task_show', {'task_id': 0}) }}",
             notificationsGet: "{{ url('zectranet_notifications_get') }}",
             homeOfficeShow: "{{ url('zectranet_show_office', {'office_id': 0, 'conversation_id': 'conv_id'}) }}",
             officeShow: "{{ url('zectranet_show_office', {'office_id': 0}) }}",
