Поиск дизайн страницы

--- a/src/ZectranetBundle/Resources/views/search.html.twig
+++ b/src/ZectranetBundle/Resources/views/search.html.twig
@@ -13,7 +13,58 @@
 {% endblock %}
 
 {% block body %}
-    <!-- PLACE YOUR PAGE HERE -->
+
+    <div class="row">
+        <ol class="breadcrumb"  style="margin: 0 -30px; border-radius: 0 !important; padding: 12px 50px; background-color: #fbfbfb; ">
+            <li>
+                <a href="#">Hello men</a>
+            </li>
+            <li class="active">
+                Hello
+            </li>
+        </ol>
+    </div>
+
+
+    <div class="row">
+
+        <div class="col-md-12">
+            <h2 class="page-header" style="margin-top:15px; font-family: 'PT Sans Narrow', sans-serif">Search result</h2>
+        </div>
+
+
+
+        <div class="col-md-12 search-result-main">
+
+            <h2><a href="#">Hello world this is the </a></h2>
+
+            <span class="text-muted">Hello world you know what dose mean</span>
+
+        </div>
+
+        <div class="col-md-12 search-result-main">
+
+            <h2><a href="#">Hello world this is the </a></h2>
+
+            <span class="text-muted">Hello world you know what dose mean</span>
+
+        </div>
+
+        <div class="col-md-12 search-result-main">
+
+            <h2><a href="#">Hello world this is the </a></h2>
+
+            <span class="text-muted">Hello world you know what dose mean</span>
+
+        </div>
+
+
+    </div>
+
+
+
+
+
 {% endblock %}
 
 {% block javascripts %}
