--- a/web/bundles/zectranet/templates/task-table.html
+++ b/web/bundles/zectranet/templates/task-table.html
@@ -22,7 +22,7 @@
     </thead>
 
     <tbody ng-repeat="task in tasks | orderBy: tasksOrderBy | filter: execTaskFilter"
-           ng-init="parentTask = task">
+           ng-init="parentTask = task; showStatusLabel[$index] = false;">
     <tr ng-if="task.parentid == null">
         <td class="col-xs-1" style="font-size: 10px;">
             <span style="vertical-align: middle;">
@@ -53,9 +53,18 @@
             </div>
         </td>
         <td class="col-xs-1 hidden-xs">
-            <div class="label label-default" style="background-color: [[ task.status.color ]];">
+
+            <select ng-if="(task.subtasks.length == 0) && (task.showStatusLabel)" ng-blur="changeStatus(task); task.showStatusLabel = false;" ng-model="task.status.selected" style="border: none;font-weight: bold;">
+                <option ng-repeat="status in taskStatuses"
+                        style="color: [[ status.color ]]" value="[[ status.id ]]" ng-selected="status.id == task.status.id">
+                    [[status.label]]
+                </option>
+            </select>
+
+            <div ng-if="!task.showStatusLabel" ng-click="task.showStatusLabel = clickOnStatus(task.showStatusLabel)" class="label label-default" style="background-color: [[ task.status.color ]];">
                 [[ task.status.label ]]
             </div>
+
         </td>
         <td class="col-xs-1 hidden-xs">[[ task.progress ]]%</td>
         <td class="col-xs-1 hidden-sm hidden-xs">[[ task.estimatedHours + ' h ' + task.estimatedMinutes + ' m' ]]</td>
@@ -117,9 +126,18 @@
             </div>
         </td>
         <td class="col-xs-1 hidden-xs">
-            <div class="label label-default" style="background-color: [[ task.status.color ]];">
+
+            <select ng-if="task.showStatusLabel" ng-blur="changeStatus(task); task.showStatusLabel = false;" ng-model="task.status.selected" style="border: none;font-weight: bold;">
+                <option ng-repeat="status in taskStatuses"
+                        style="color: [[ status.color ]]" value="[[ status.id ]]" ng-selected="status.id == task.status.id">
+                    [[status.label]]
+                </option>
+            </select>
+
+            <div ng-if="!task.showStatusLabel" ng-click="task.showStatusLabel = clickOnStatus(task.showStatusLabel)" class="label label-default" style="background-color: [[ task.status.color ]];">
                 [[ task.status.label ]]
             </div>
+
         </td>
         <td class="col-xs-1 hidden-xs">[[ task.progress ]]%</td>
         <td class="col-xs-1 hidden-sm hidden-xs">[[ task.estimatedHours + ' h ' + task.estimatedMinutes + ' m' ]]</td>
