Search develop part #5

--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -69,7 +69,7 @@
                                         </div>
 
                                         <div class="list-group-item" ng-repeat="item in miniSearchResults.Projects.taskPosts">
-                                            <a ng-href="[[ item.href ]]" target="_self">[[ item.name ]]</a>
+                                            <a ng-href="[[ item.href ]]" target="_self">[[ item.message ]]</a>
                                         </div>
 
                                         <div class="list-group-item" ng-repeat="item in miniSearchResults.Projects.posts">
