Fix sprint task mean progress calculation

--- a/src/ZectranetBundle/Resources/views/sprint.html.twig
+++ b/src/ZectranetBundle/Resources/views/sprint.html.twig
@@ -1,6 +1,6 @@
 {% extends '@Zectranet/index.html.twig' %}
 
-{% block title %}Sprint page{% endblock %}
+{% block title %}{{ sprint.name }}{% endblock %}
 
 {% block body %}
     <div ng-controller="SprintController" ng-init="getTasks();">
