--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -439,9 +439,16 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
-                        <button type="button" ng-click="saveSingleTaskInfo(taskInfoEdit);" class="btn btn-default btn-primary">
-                            Save
-                        </button>
+                        <div class="btn-group">
+                            <button type="button" ng-click="saveSingleTaskInfo(taskInfoEdit);" class="btn btn-default btn-primary">
+                                Save
+                            </button>
+                            {% if task.parent %}
+                            <a class="btn btn-default" href="{{ path('zectranet_subtask_make_task', { 'task_id': task.id }) }}">
+                                Make Subtask Task
+                            </a>
+                            {% endif %}
+                        </div>
                     </div>
                 </div>
             </div>
@@ -623,6 +630,7 @@
         JSON_URLS.userPage = "{{ path('zectranet_user_page', {'user_id': 0}) }}";
         JSON_URLS.saveTaskInfo = "{{ path('zectranet_task_edit_info', { 'task_id': task.id }) }}";
         JSON_URLS.getSingleTask = "{{ path('zectranent_task_get_single', { 'task_id': task.id }) }}";
+        JSON_URLS.makeSubtaskTask = "{{ path('zectranet_subtask_make_task', { 'task_id': task.id }) }}";
         TEMPPARAMS.TASK_ID = {{ task.id }};
     </script>
     <script src="{{ asset('bundles/zectranet/js/custom/taskController.js') }}" type="text/javascript"></script>
