--- a/web/bundles/zectranet/templates/task-table.html
+++ b/web/bundles/zectranet/templates/task-table.html
@@ -82,8 +82,14 @@
                     <li>
                         <a data-toggle="modal" data-target="#add_new_subtask" ng-click="addParentIdToSubTask(task.id)" style="cursor: pointer"><i class="fa fa-code-fork"></i> Add new subtask</a>
                     </li>
-                    <li>
+                    <li ng-if="task.sprint.name == 'none'">
                         <a  data-toggle="modal" data-target="#add_task_to_sprint" ng-click="taskModel.id = task.id" style="cursor: pointer"><i class="fa fa-stack-overflow"></i> Add task to sprint</a>
+                    </li>
+                    <li ng-if="task.sprint.name != 'none'">
+                        <a ng-click="detachTaskFromSprint(task);" style="cursor: pointer;">
+                            <i class="fa fa-stack-overflow"></i>
+                            Detach task from sprint
+                        </a>
                     </li>
                     <li class="divider"></li>
                     <li>
