Search develop part #5

--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -317,6 +317,7 @@
 
         JSON_URLS.showSprint = "{{ path('zectranet_show_sprint', { 'office_id': 0, 'sprint_id': 1 }) }}";
         JSON_URLS.sprintAddTasks = "{{ path('zectranet_sprint_add_tasks', { 'sprint_id': 0 }) }}";
+        JSON_URLS.sprintDetachTask = "{{ path('zectranet_detach_task_from_sprint', { 'task_id': 0 }) }}";
 
         JSON_URLS.getProjectVersions = "{{ path('zectranet_get_project_versions', { 'project_id': project.id }) }}";
         JSON_URLS.addNewProjectVersion = "{{ path('zectranet_add_project_version', { 'project_id': project.id }) }}";
