--- a/web/bundles/zectranet/templates/task-table.html
+++ b/web/bundles/zectranet/templates/task-table.html
@@ -22,7 +22,7 @@
     </thead>
 
     <tbody ng-repeat="task in tasks | orderBy: tasksOrderBy | filter: execTaskFilter"
-           ng-init="parentTask = task; showStatusLabel[$index] = false;">
+           ng-init="parentTask = task">
     <tr ng-if="task.parentid == null">
         <td class="col-xs-1" style="font-size: 10px;">
             <span style="vertical-align: middle;">
@@ -36,7 +36,7 @@
             <span ng-if="task.type.label == 'improvement'" class="badge" style="background-color: #337ab7; font-size: 10px;">[['i']]</span>
         </td>
 
-        <td class="col-xs-3" >
+        <td class="col-xs-3">
             <a ng-show="task.subtasks.length > 0" ng-click="task.expand = !task.expand" style="text-decoration: none; cursor: pointer;">
                 <i ng-hide="task.expand" class="fa fa-plus"></i>
                 <i ng-show="task.expand" class="fa fa-minus"></i>
@@ -53,18 +53,9 @@
             </div>
         </td>
         <td class="col-xs-1 hidden-xs">
-
-            <select ng-if="(task.subtasks.length == 0) && (task.showStatusLabel)" ng-blur="changeStatus(task); task.showStatusLabel = false;" ng-model="task.status.selected" style="border: none;font-weight: bold;">
-                <option ng-repeat="status in taskStatuses"
-                        style="color: [[ status.color ]]" value="[[ status.id ]]" ng-selected="status.id == task.status.id">
-                    [[status.label]]
-                </option>
-            </select>
-
-            <div ng-if="!task.showStatusLabel" ng-click="task.showStatusLabel = clickOnStatus(task.showStatusLabel)" class="label label-default" style="background-color: [[ task.status.color ]];">
+            <div class="label label-default" style="background-color: [[ task.status.color ]];">
                 [[ task.status.label ]]
             </div>
-
         </td>
         <td class="col-xs-1 hidden-xs">[[ task.progress ]]%</td>
         <td class="col-xs-1 hidden-sm hidden-xs">[[ task.estimatedHours + ' h ' + task.estimatedMinutes + ' m' ]]</td>
@@ -91,8 +82,14 @@
                     <li>
                         <a data-toggle="modal" data-target="#add_new_subtask" ng-click="addParentIdToSubTask(task.id)" style="cursor: pointer"><i class="fa fa-code-fork"></i> Add new subtask</a>
                     </li>
-                    <li>
+                    <li ng-if="task.sprint.name == 'none'">
                         <a  data-toggle="modal" data-target="#add_task_to_sprint" ng-click="taskModel.id = task.id" style="cursor: pointer"><i class="fa fa-stack-overflow"></i> Add task to sprint</a>
+                    </li>
+                    <li ng-if="task.sprint.name != 'none'">
+                        <a ng-click="detachTaskFromSprint(task);" style="cursor: pointer;">
+                            <i class="fa fa-stack-overflow"></i>
+                            Detach task from sprint
+                        </a>
                     </li>
                     <li class="divider"></li>
                     <li>
@@ -126,18 +123,9 @@
             </div>
         </td>
         <td class="col-xs-1 hidden-xs">
-
-            <select ng-if="task.showStatusLabel" ng-blur="changeStatus(task); task.showStatusLabel = false;" ng-model="task.status.selected" style="border: none;font-weight: bold;">
-                <option ng-repeat="status in taskStatuses"
-                        style="color: [[ status.color ]]" value="[[ status.id ]]" ng-selected="status.id == task.status.id">
-                    [[status.label]]
-                </option>
-            </select>
-
-            <div ng-if="!task.showStatusLabel" ng-click="task.showStatusLabel = clickOnStatus(task.showStatusLabel)" class="label label-default" style="background-color: [[ task.status.color ]];">
+            <div class="label label-default" style="background-color: [[ task.status.color ]];">
                 [[ task.status.label ]]
             </div>
-
         </td>
         <td class="col-xs-1 hidden-xs">[[ task.progress ]]%</td>
         <td class="col-xs-1 hidden-sm hidden-xs">[[ task.estimatedHours + ' h ' + task.estimatedMinutes + ' m' ]]</td>
